# codewiki

./: .gitignore  Cargo.toml  LICENSE  README.md
.githooks/: pre-commit
.github/: CODEOWNERS
scripts/: install.sh
src/: cli.rs  main.rs
src/chat/: api.rs  claude.rs  cli.rs  mod.rs
src/graph/: mod.rs  store.rs
src/parser/: elixir.rs  mod.rs  python.rs  rust.rs
src/parser/queries/: elixir.scm  python.scm  rust.scm
src/server/: api.rs  mod.rs
web/: biome.json  index.html  package.json
web/src/: App.tsx  api.ts  constants.ts  index.css  types.ts
web/src/components/: ChatPanel.tsx  CodePanel.tsx  FileTree.tsx  GraphView.tsx  Icons.tsx  KindBadge.tsx  SearchBar.tsx
web/src/hooks/: useChat.ts  useGraph.ts
