[package]
name = "codewiki"
version = "0.1.0"
edition = "2024"

[dependencies]
tree-sitter = "=0.26.6"
tree-sitter-rust = "=0.24.0"
streaming-iterator = "=0.1.9"
clap = { version = "=4.5.60", features = ["derive"] }
axum = "=0.8.8"
tokio = { version = "=1.49.0", features = ["full"] }
tower = "=0.5.3"
tower-http = { version = "=0.6.8", features = ["cors", "fs"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
reqwest = { version = "=0.13.2", features = ["json", "stream"] }
ignore = "=0.4.25"
anyhow = "=1.0.102"
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.22", features = ["env-filter"] }
open = "=5.3.3"
dirs = "=6.0.0"
futures = "=0.3.32"
tokio-stream = { version = "=0.1.18", features = ["io-util"] }
